config/objects/Team_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Daily_Fixed_Cost__c</fullName>
        <label>Daily Fixed Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profit_Share_Rate__c</fullName>
        <label>Profit Share</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Team__c</columns>
        <columns>User__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Daily_Fixed_Cost__c</columns>
        <columns>Commission_Rate__c</columns>
        <columns>Profit_Share_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{0}</displayFormat>
        <label>Team Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>